Fix style button align

--- a/src/app/modules/core/components/details/details.component.scss
+++ b/src/app/modules/core/components/details/details.component.scss
@@ -1,6 +1,6 @@
 div {
   font-family: 'Signika', sans-serif;
-  width: 800px;
+  width: 820px;
 
 .container {
   margin: 0;
